--- a/8th/style.css
+++ b/8th/style.css
@@ -1,4 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+:where(h1, h2, h3, h4, h5, h6) {
+  font-weight: normal;
+  line-height: 1.5;
+}
+:where(img, video) {
+  height: auto;
+  max-width: 100%;
+}
 :root{
     --purple: hsl(257, 40%, 49%);
     --magneta: hsl(300, 69%, 71%);
@@ -7,96 +23,157 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
+    font-family: "Poppins", sans-serif;
 }
-@media all and (max-width: 450px){
-    #all-desktop{
-        display: none;
-    }
-#all-mobile{
+@media screen and (max-width:1200px){
+#all{
     margin: 0px auto;
     background-image: url('./images/bg-m.svg');
     background-size: contain;
     background-repeat: no-repeat;
     background-color: var(--purple);
-    width: 450px;
-    height: 100%;
+    min-width: 100%;
+    min-height:100vh;
     color: white;
-    font-family: "Roboto", "sans-serif";
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap:50px;
 }
-.part1-m{
+.part1{
     display: flex;
     flex-direction: column;
     align-items: start;
-    margin: 0px 40px;
+    justify-content: center;
+    margin: 0px 30px;
 }
-.part2-m{
+.part2{
     display: flex;
     flex-direction: column;
-    margin-left: 40px;
-    margin-right: 40px;
-    margin-top: 20px;
-    padding-bottom: 1000px;
+    margin: 0px 43px;
 }
 #mock{
-    width: 100%;
-    height: 250px;
+    min-height: 100%;
+    max-width:100%;
 }
 #logo{
     width: 150px;
     padding-bottom: 60px;
     padding-top: 30px;
 }
-#btn-m{
+#btn{
     border:0px solid;
     border-radius: 20px;
-    padding: 14px 80px;
+    padding: 14px 25%;
     align-self: center;
     color: var(--purple);
-    margin-top:20px;
+    margin-top:40px;
 }
-#btn-m:hover{
+#btn:hover{
     background-color: var(--magneta);
     color: white;
     cursor: pointer;
-    transition: 300ms;
+    transition: 320ms ;
 }
 .parag{
 font-weight: 200;
 text-align: center;
 font-size: 16px;
+opacity: 90%;
+max-width:693px;
 }
  .title{
-    font-weight: 500;
+    font-weight: 600;
     width: 100%;
     font-size: 31.5px;
     text-align: center;
 }
 .footer{
-    width: 30px;
-    height: 30px;
+    width: 35px;
+    height: 35px;
     opacity: 70%;
+    margin-bottom: 40px;
 }
 .footer:hover{
     transform: translateY(-2px);
     transition-duration: 300ms;
     opacity: 100%;
 }
-#footer-m{
+#footer{
     display: flex;
     gap: 14px;
     justify-content: center;
     margin-top: 40px;
 }}
-@media all and (min-width: 450px){
-    #all-mobile{
-        display: none;
-    }
-    #all-desktop{
-        display: flex;
-        background-image: url('./images/bg-desktop.svg') no-repeat;
+ @media all and (min-width: 1199px){
+    body{
         background-color: var(--purple);
+        background-image: url('./images/bg-d.svg') ;
+        background-repeat: no-repeat;
+        background-position:cover;
     }
+  #all{
+        border: 0px solid black;
+        display: flex;
+        gap: 20px;
+        flex-direction: row;
+        min-height:100vh;
+        overflow:hidden;
+        align-items: center;
+        padding: 0px 100px;
+        color: white;
+             }
+.part2{
+width: 50%;
+padding-top: 60px;
+display: flex;
+flex-direction: column;
+gap:30px;
+}
+#btn{
+    width: 30%;
+    border:0px solid;
+    border-radius: 20px;
+    padding: 14px 0px;
+    text-align: center;
+    color: var(--purple);
+    -webkit-box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.58);
+    -moz-box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.58);
+    box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.58);
+}
+#btn:hover{
+    background-color: var(--magneta);
+    color: white;
+    cursor: pointer;
+    transition: 320ms ease ;
+}
+#logo{
+    position: absolute;
+    top: 0;
+    padding-top: 80px;
+}
+#mock{
+    padding-top: 60px;
+}
+.part1{
+    width: 50%;
+}
+.title{
+    font-size: 40px;
+}
+.footer{
+    width: 50px;
+   height: 50px;
+}
+.footer:hover{
+    transform: translateY(-2px);
+    transition-duration: 300ms;
+    opacity: 100%;
+}
+   #footer{
+   display: flex;
+   gap: 20px;
+   align-self: end;
+   }
 }
